serviceRedis.yaml
apiVersion: v1
kind: Service
metadata:
  name: rediscluster
spec:
  type: ClusterIP
  selector:
    app: redislabel
  ports:
  - port: 6379
